# MedSeg-TTA

./: .gitignore  ASSETS.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
DG-TTA/: test_target_tta.py  tta2d.py  tta3dCT.py
DG-TTA/three_d/: test_target_tta.py
DG-TTA/two_d/: tta2d.py
ExploringTTA/: test_target_tta.py  tta3dCT.py
GraTa/: test_target_tta.py  tta2d.py
GraTa-3d/: grata_3d.py  grata_wrapper.py  tta3dCT.py
GraTa-3d/GraTa-master/: TTA.py
GraTa/GraTa-master/: TTA.py
GraTa/three_d/GraTa-master/: TTA.py
GraTa/two_d/: test_target_tta.py
GraTa/two_d/GraTa-master/: TTA.py
ProSFDA/three_d/: tta3dCT.py
ProSFDA2D/: tta2d.py
ProSFDA2D/prosfda/inference/: run_inference.py
ProSFDA2D/prosfda/training/: run_training.py
ProSFDA3D/: tta3dCT.py
ProSFDA3D/prosfda/inference/: run_inference.py
ProSFDA3D/prosfda/training/: run_training.py
SFDA-FSM/: tta2d.py  tta2d_inf.py  tta3d.py  tta3dCT.py
SFDA-FSM/three_d/: tta3dCT.py
SFDA-FSM/tools/: test.py  train_adapt.py
SaTTCA/: sattc.py  tta2d.py  tta3dCT.py  tta3dMRI.py
SaTTCA/three_d/: tta3dCT.py
SaTTCA/two_d/: tta2d.py
Testfit/: testfit.py  tta2d.py  tta3dCT.py
Testfit/three_d/: testfit.py
docs/: CODE_ANALYSIS.md  METHOD_INDEX.md  VALIDATION.md
medseg_tta/: __init__.py  cli.py  registry.py  validate.py
medseg_tta/common/: checkpoint.py  legacy.py  paths.py
scripts/: oneclick_github.sh
site/: app.js  index.html  styles.css
site/data/: leaderboard.json
tent/: tent.py  tent2d.py  tta2d.py  tta3d.py  tta3dCT.py
tent/three_d/: tent.py  tta3dCT.py
(+478 files in other folders)
